Add OAuth signWithKakao

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="client_id">[client_id]</string>
-    <string name="client_secret">[client_secret]</string>
-    <string name="client_name">[client_name]</string>
+    <string name="client_id">[cMjuswRdTQumD6iCqtT0]</string>
+    <string name="client_secret">[cMjuswRdTQumD6iCqtT0]</string>
+    <string name="client_name">[헤이즐]</string>
 </resources>
