Fixing SignWithNaver Logic

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="client_id">[cMjuswRdTQumD6iCqtT0]</string>
-    <string name="client_secret">[cMjuswRdTQumD6iCqtT0]</string>
-    <string name="client_name">[헤이즐]</string>
+    <string name="client_id">nTYWPd0nyLOU53ZPaj1E</string>
+    <string name="client_secret">73dRoaQ4UF</string>
+    <string name="client_name">Hazel</string>
 </resources>
